--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
   <groupId>testflight</groupId>
   <artifactId>testflight</artifactId>
-  <version>1.0</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
   <!-- get every artifact through maven.glassfish.org, which proxies all the artifacts that we need -->
@@ -19,6 +19,22 @@
     </repository>
   </repositories>
 
+  <scm>
+    <connection>scm:git:ssh://github.com/jenkinsci/testflight-plugin.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/jenkinsci/testflight-plugin.git</developerConnection>
+    <url>https://github.com/jenkinsci/testflight-plugin</url>
+  </scm>
+
+  <url>http://wiki.jenkins-ci.org/display/JENKINS/Testfligh</url>
+
+
+  <developers>
+    <developer>
+      <id>jweinberg</id>
+      <name>Joshua Weinberg</name>
+      <email>joshuacweinberg@gmail.com</email>
+    </developer>
+  </developers>
   <pluginRepositories>
     <pluginRepository>
       <id>m.g.o-public</id>
