Fixing small issue in the pom

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
   <groupId>testflight</groupId>
   <artifactId>testflight</artifactId>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
   <!-- get every artifact through maven.glassfish.org, which proxies all the artifacts that we need -->
@@ -21,7 +21,7 @@
 
   <scm>
     <connection>scm:git:ssh://github.com/jenkinsci/testflight-plugin.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/jenkinsci/testflight-plugin.git</developerConnection>
+	<developerConnection>scm:git:git@github.com/jenkinsci/testflight-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/testflight-plugin</url>
   </scm>
 
