--- a/pom.xml
+++ b/pom.xml
@@ -67,5 +67,11 @@
       <version>1.1</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+    	<groupId>commons-codec</groupId>
+		<artifactId>commons-codec</artifactId>
+		<version>1.6</version>
+		<scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
