--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
   <repositories>
     <repository>
       <id>m.g.o-public</id>
-      <url>http://maven.glassfish.org/content/groups/public/</url>
+      <url>https://maven.java.net/content/groups/public/</url>
     </repository>
   </repositories>
 
@@ -44,7 +44,7 @@
   <pluginRepositories>
     <pluginRepository>
       <id>m.g.o-public</id>
-      <url>http://maven.glassfish.org/content/groups/public/</url>
+      <url>https://maven.java.net/content/groups/public/</url>
     </pluginRepository>
   </pluginRepositories>
 
