Updated repo URLs from m.g.o-public to repo.jenkins-ci.org/public
Updated repo URLs to use http://repo.jenkins-ci.org/public as is
suggested here:
http://jenkins.361315.n4.nabble.com/m-g-o-public-gt-repo-jenkins-ci-org-
public-td4433896.html

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
   <repositories>
     <repository>
       <id>m.g.o-public</id>
-      <url>https://maven.java.net/content/groups/public/</url>
+      <url>http://repo.jenkins-ci.org/public</url>
     </repository>
   </repositories>
 
@@ -44,7 +44,7 @@
   <pluginRepositories>
     <pluginRepository>
       <id>m.g.o-public</id>
-      <url>https://maven.java.net/content/groups/public/</url>
+      <url>http://repo.jenkins-ci.org/public</url>
     </pluginRepository>
   </pluginRepositories>
 
