--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <artifactId>hockeyapp</artifactId>
   <name>Hockeyapp Plugin</name>
   <description>Uploads .ipa and .dsym files to www.hockeyapp.net</description>
-  <version>1.0.3</version>
+  <version>1.0.4-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
   <!-- get every artifact through maven.glassfish.org, which proxies all the artifacts that we need -->
