--- a/pom.xml
+++ b/pom.xml
@@ -62,10 +62,20 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-    	<groupId>commons-codec</groupId>
-		<artifactId>commons-codec</artifactId>
-		<version>1.6</version>
-		<scope>compile</scope>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.6</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.scm</groupId>
+      <artifactId>maven-scm-api</artifactId>
+      <version>1.9.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.scm</groupId>
+      <artifactId>maven-scm-provider-gitexe</artifactId>
+      <version>1.9.2</version>
     </dependency>
   </dependencies>
 </project>
