--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.591</version>
+    <version>1.609.2</version>
   </parent>
 
   <properties>
-    <jenkins.version>1.591</jenkins.version>
+    <jenkins.version>1.609.2</jenkins.version>
     <java.level>7</java.level>
     <jenkins-test-harness.version>2.13</jenkins-test-harness.version>
   </properties>
@@ -40,6 +40,13 @@
     <url>https://github.com/jenkinsci/hockeyapp-plugin</url>
     <tag>HEAD</tag>
   </scm>
+
+  <distributionManagement>
+    <repository>
+      <id>maven.jenkins-ci.org</id>
+      <url>https://repo.jenkins-ci.org/releases</url>
+    </repository>
+  </distributionManagement>
 
   <url>http://wiki.jenkins-ci.org/display/JENKINS/HockeyApp+Plugin</url>
   <developers>
