Prep for release and injected tests

--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,12 @@
   <distributionManagement>
     <repository>
       <id>maven.jenkins-ci.org</id>
-      <url>https://repo.jenkins-ci.org/releases</url>
+      <url>https://repo.jenkins-ci.org/releases/</url>
     </repository>
+    <snapshotRepository>
+      <id>maven.jenkins-ci.org</id>
+      <url>https://repo.jenkins-ci.org/snapshots/</url>
+    </snapshotRepository>
   </distributionManagement>
 
   <url>http://wiki.jenkins-ci.org/display/JENKINS/HockeyApp+Plugin</url>
