--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,13 @@
     </parent>
 
     <artifactId>hockeyapp</artifactId>
-    <version>1.4.1-SNAPSHOT</version>
+    <version>1.5.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
 
     <properties>
         <jenkins.version>2.73.3</jenkins.version>
         <java.level>8</java.level>
+        <hpi.compatibleSinceVersion>1.5.0</hpi.compatibleSinceVersion>
     </properties>
 
     <name>HockeyApp Plugin</name>
